@@ -5,12 +5,21 @@ public class NashConfig {
     public final long clientId;
     public final String environment;
     public final long timeout;
+    public final String affiliateCode;
 
+    public NashConfig(NashCredentials credentials, long clientId, String environment, long timeout, String affiliateCode) {
+        this.credentials = credentials;
+        this.clientId = clientId;
+        this.environment = environment;
+        this.timeout = timeout;
+        this.affiliateCode = affiliateCode;
+    }
     public NashConfig(NashCredentials credentials, long clientId, String environment, long timeout) {
         this.credentials = credentials;
         this.clientId = clientId;
         this.environment = environment;
         this.timeout = timeout;
+        this.affiliateCode = null;
     }
 
     @Override
@@ -20,6 +29,7 @@ public class NashConfig {
                 ", clientId=" + clientId +
                 ", environment='" + environment + '\'' +
                 ", timeout=" + timeout +
+                ", affiliateCode='" + affiliateCode + '\'' +
                 '}';
     }
 }
