@@ -17,4 +17,4 @@ futures-util = "0.3"
 jni = "0.18.0"
 rust_decimal = "1.7.0"
 thiserror = "1.0.22"
-openlimits = { git = "https://github.com/nash-io/openlimits", rev = "6856bb4c5d220ababb188ce487df59865adf1680" }
+openlimits = { git = "https://github.com/nash-io/openlimits", rev = "c6dd20f0bbe4881499ed6d8148e0ba78b8ed5069" }
