@@ -1,1 +1,5 @@
 v0.1.1
+ - Add support for affiliate code
+ - Expose updateId and lastUpdateId in orderbooks to enable better local orderbook management
+ - Fix a memory leak
+ - Return correct precision for nash data
